                    - changed "del_rule()" function
                        - fix bug who delete btn caused a fatal error if no rule was selected
                    - changed "add_rule()" function
                        - check if rule name already exists
                    - added "rule_clone_button" button
                    - disable clone rule buttons while connected to hub as expected
                - tab_5
                    - added new tab for "categories" on tab position 5
                    - added "categories_listbox" element
                    - changed "categories_listbox" to sort categories by name
                    - added "import_categories_tbl()" function
                        - import categories from "cfg/rules.lua" to "cfg/categories.lua"
                    - added "add_category()" function
                        - check if category name contain whitespaces
                        - check if category name already exists
                    - added "del_category()" function
                        - check if category name is selected on a rule
                - tab_5 / tab_6
                    - moved "tab_5" to "tab_6"

            - global:
                - added "inTable(table, value, field)" function to search in table
                    - table: table to search in
                    - value: value to search for
                    - field: optional field for multidimensional tables
                - added "spairs(table , order, field)" function to order a table
                    - table: table to search in
                    - order: asc | desc | custom funtion
                    - field: optional field for multidimensional tables
                - added "table.copy(tablename)" function to clone a table
                    - tablename: table to clone

v0.7 [2015-10-15]

    - update: "core/net.lua"
        - some fixes

    - update: "Announcer.wx.lua"
        - fixed problem with "open in foreground" if app is iconized
