@@ -31,6 +31,8 @@ v0.8 [2015-]
                         - check if rule name already exists
                     - added "rule_clone_button" button
                     - disable clone rule buttons while connected to hub as expected
+                - tab_5 / tab_6
+                    - moved existing "tab_5" to "tab_6"
                 - tab_5
                     - added new tab for "categories" on tab position 5
                     - added "categories_listbox" element
@@ -42,8 +44,8 @@ v0.8 [2015-]
                         - check if category name already exists
                     - added "del_category()" function
                         - check if category name is selected on a rule
-                - tab_5 / tab_6
-                    - moved "tab_5" to "tab_6"
+                - tab_6
+                    - show filesize of log file
 
             - global:
                 - added "inTable(table, value, field)" function to search in table
